# Poles

./: .gitignore  CMakeLists.txt  Poles.cbp  Poles.sublime-project  Poles.sublime-workspace  README.md  main.cpp
assets/: README.md  assets
assets/images/: @Template.json  bg.json  spriteSheet_template.json  zero.json
assets/images/parallax-test/: Layer06.json
engine/: ResourcesManager.cpp  ResourcesManager.h  Vector2D.cpp  Vector2D.h
include/engine/: Color.h  EventListener.h  ExtraTools.h  Game.h  GameObject.h  ParallaxScrolling.h  RenderizableAsset.h  Scene.h  SceneManager.h  SpriteAnimation.h  SpriteSheet.h  Vector2D.h  Window.h
include/engine/components/: AssetRenderer.h  Camera.h  Renderer.h  Transform.h
poles-editor/: main.cpp  poles-editor.pro
poles-editor/editor/: EditorWindow.cpp  EditorWindow.h  EditorWindow.ui  GameRendererWidget.cpp  GameRendererWidget.h  GameRendererWidget.ui  GameThread.cpp  GameThread.h
src/: JsonFile.cpp  JsonFile.h  main.cpp
src/core/: Circle.cpp  Circle.h  CollisionBox.cpp  CollisionBox.h  Color.cpp  Color.h  ExtraTools.h  GameObject.cpp  GameObject.h  Line.cpp  Line.h  ResourceManager.cpp  ResourceManager.h  Sprite.cpp  Sprite.h  SpriteAnimation.cpp  SpriteAnimation.h  SpriteSheet.cpp  SpriteSheet.h  Vector2D.cpp  Vector2D.h
src/core/components/: Camera.cpp  Camera.h  Collisions.cpp  Collisions.h  Component.h  Components.h  Physics.cpp  Physics.h  Position.cpp  Position.h  PositionComponent.cpp  PositionComponent.h  Renderer.cpp  Renderer.h  SpriteRenderer.cpp  SpriteRenderer.h  SpriteRendererComponent.cpp  SpriteRendererComponent.h  SpriteSheetRendererComponent.cpp  SpriteSheetRendererComponent.h  TextRenderer.cpp  TextRenderer.h  TextRendererComponent.cpp  TextRendererComponent.h  Velocity.cpp  Velocity.h  VelocityComponent.h
src/core/systems/: CollisionSystem.cpp  CollisionSystem.h  MovementSystem.cpp  MovementSystem.h  RenderingSystem.cpp  RenderingSystem.h  TextRenderingSystem.cpp  TextRenderingSystem.h
src/engine/: Circle.cpp  Color.cpp  Color.h  EventListener.cpp  ExtraTools.h  Game.cpp  GameObject.cpp  Line.cpp  Line.h  ParallaxScrolling.cpp  RenderizableAsset.cpp  Scene.cpp  SceneManager.cpp  SpriteAnimation.cpp  SpriteSheet.cpp  Vector2D.cpp  Vector2D.h  Window.cpp
src/engine/components/: AssetRenderer.cpp  Camera.cpp  Renderer.cpp  Transform.cpp
src/game/: Event.cpp  Event.h  EventListener.cpp  EventListener.h  Game.cpp  Game.h  GameState.cpp  GameState.h  GameStateManager.cpp  GameStateManager.h  PolesGame.cpp  PolesGame.h
src/game/scenes/: TestScene.cpp  TestScene.h
src/game/states/: DebugState.cpp  DebugState.h  IntroState.cpp  IntroState.h  ParallaxTest.cpp  ParallaxTest.h
